# soroscope

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feat_10_fuzz_test.md  feat_5_approve.md  feat_6_transfer_from.md  feat_7_burn.md  feat_8_pausable.md  feat_9_admin_fee.md  feature_request.md  gfi_1_docs.md  gfi_2_test_zero.md  gfi_3_refactor_error.md  gfi_4_test_events.md
.github/workflows/: ci.yml
contracts/cpu_heavy/src/: lib.rs  test.rs
contracts/cross_call/: Cargo.toml
contracts/cross_call/src/: contract_a.rs  contract_b.rs  lib.rs  test.rs
contracts/factory/src/: lib.rs  test.rs
contracts/hello_soroban/: Cargo.toml
contracts/hello_soroban/src/: test.rs
contracts/liquidity_pool/: Cargo.toml
contracts/liquidity_pool/src/: fuzz_test.rs  lib.rs  test.rs
contracts/token/: Cargo.toml
contracts/token/src/: admin.rs  allowance.rs  balance.rs  contract.rs  lib.rs  metadata.rs  storage_types.rs  test.rs
core/: Cargo.toml
core/src/: auth.rs  benchmarks.rs  errors.rs  insights.rs  lib.rs  main.rs  network_config.rs  parser.rs  rpc_provider.rs  simulation.rs
docs/: good-first-issues.md  issues.md
scripts/: update_issues.sh
web/: next.config.js  package-lock.json  package.json  setup-wallet.md  tailwind.config.js  tsconfig.tsbuildinfo
web/components/: ConnectButton.tsx  NutritionLabel.tsx  Resultviewer.tsx  WalletModal.tsx  upload-zone.tsx  userIcon.tsx
web/context/: WalletContext.tsx
web/lib/: sorobantypes.ts
web/pages/: _app.tsx  index.tsx
(+275 files in other folders)
