[package]
name = "soroscope-core"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
